Fix checkbox misalignment.

--- a/styles/base-sheet.scss
+++ b/styles/base-sheet.scss
@@ -127,7 +127,7 @@ body.game.vtt.system-zweihander {
           content: " ";
           display: block;
           height: 10px;
-          left: calc(50% - 10px);
+          // left: calc(50% - 10px);
           position: absolute;
           z-index: -1;
           top: 0px;
